--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@ body
 
 .header
 {
-	background: url(images/bg.jpg);
+	background: url(bg.jpg);
 	height: 100vh;
 	width: 100%;
 	background-repeat: no-repeat;
