--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@ body
 
 .header
 {
-	background: url(bg.jpg);
+	background: url(images/bg.jpg);
 	height: 100vh;
 	width: 100%;
 	background-repeat: no-repeat;
@@ -52,7 +52,7 @@ body
 
 .head-content img
 {
-	border-radius: 50%;
+	border-radius: 10%;
 	border: 2px solid #fff;
 	margin-top: 20px;
 }
@@ -99,8 +99,9 @@ body
 
 .gallery-section
 {
-	width: 100%;
-	height: 500px;
+	display: felx;
+	width: 100vw;
+	
 	background: #9ea0a3;
 	text-align: center;
 }
@@ -111,14 +112,15 @@ body
 	font-size: 30px;
 	font-family: sans-serif;
 	padding: 10px;
+	padding-bottom: 40px;
 }
 
 .gallery-section img
 {
-	height: 300px;
-	width: 300px;
+	height: 200px;
+	width: 200px;
 	border: 2px solid transparent;
-	border-radius: 100%;
+	border-radius: 10%;
 }
 
 .gallery-section img:hover
@@ -129,10 +131,13 @@ body
 
 .contact-section
 {
-	height: 56vh;
+	padding-top:50px;
+	height: 70vh;
 	background: gray;
 	text-align: center;
-	margin:400 auto;
+	width:100vw;
+	/*margin:400 auto;*/
+	
 }
 
 .contact-section span
@@ -140,6 +145,10 @@ body
 	font-size: 30px;
 	font-weight: bold;
 	text-decoration: underline;
+	margin-top: 800px;
+}
+#contact{
+
 }
 
 input
@@ -165,9 +174,12 @@ textarea
 	text-align: center;
 	font-size: 20px;
 }
-
+.inp-name{
+	margin-top: 20px;
+}
 .inp-name, .inp-mail
 {
+ 
 	height: 50px;
 	width: 500px;
 }
@@ -199,13 +211,29 @@ input[type=text]
 
 .copyright
 {
+	padding-top: 50px;
+	display:flex;
+	flex-direction: column;
+     width:100vw;
 	background: gray;
 	font-size: 20px;
 	height: 50px;
 	padding: 10px;
-	text-align: center;
-	color: #fff;
+
+	/*color: #fff;*/
 	cursor: default;
+}
+.copyright .contacticon{
+	display:flex;
+	justify-content: center;
+	gap:50px;
+
+
+}
+.copyright  p{
+	
+	
+	text-align:center;
 }
 
 .toggle
